# obsidian-pkm-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  llms.txt  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature.md  feature_request.md
.github/scripts/: validate_skills.py
.github/workflows/: lint-skills.yml  publish-pypi.yml  test.yml
.research/: seo-cluster.md  seo-content-brief.md
docs/: COMPARISON.md  GRAPH-ANALYSIS.md  RUBRIC.md  SAFETY.md
examples/: sample-scorecard.txt
examples/demo-vault/: README.md  sample-gold-set.jsonl
examples/demo-vault/concepts/: bm25.md  gold-set.md  hybrid-search.md  recall-at-k.md  spaced-repetition.md  vector-search.md
examples/demo-vault/entities/: lancedb.md  python.md
examples/demo-vault/inbox/: quick-clip-flow-state.md
examples/demo-vault/sources/: building-a-second-brain.md  capture-pipeline.md  learning-python-basics.md  linked-already.md  luhmann-workflow.md  orphan-graph-thinking.md  orphan-graph-thoughts.md  orphan-py-data-analysis.md
obsidian_graph_auditor/: __init__.py  auditor.py  cli.py  rubric.py
obsidian_orphan_killer/: __init__.py  slug.py
skills/obsidian-brain-eval/: SKILL.md
skills/obsidian-brain-eval/.github/workflows/: test.yml
skills/obsidian-brain-eval/.research/: seo-cluster.md
skills/obsidian-brain-eval/docs/: COMPARISON.md
skills/obsidian-brain-eval/examples/demo-vault/concepts/: evaluation-metrics.md  information-retrieval.md  rag.md
skills/obsidian-brain-eval/examples/demo-vault/entities/: obsidian.md
skills/obsidian-brain-eval/obsidian_brain_eval/: __init__.py  backends.py  cli.py  eval.py
skills/obsidian-brain-eval/tests/: conftest.py  test_eval.py
skills/obsidian-graph-auditor/: .gitignore  README.md  SKILL.md  llms.txt  pyproject.toml
skills/obsidian-graph-auditor/.github/workflows/: test.yml
skills/obsidian-graph-auditor/.research/: seo-content-brief.md  seo-sxo.md
skills/obsidian-graph-auditor/examples/: thresholds.example.yaml
skills/obsidian-graph-auditor/examples/demo-vault/: README.md
skills/obsidian-graph-auditor/examples/demo-vault/concepts/: knowledge-management.md  para-method.md  zettelkasten.md
skills/obsidian-graph-auditor/examples/demo-vault/entities/: anki.md  obsidian.md
skills/obsidian-graph-auditor/examples/demo-vault/inbox/: orphan-meeting-notes.md
skills/obsidian-graph-auditor/examples/demo-vault/sources/: atomic-notes.md  note-app-comparison.md  orphan-running-log.md  orphan-sourdough.md  review-habits.md
skills/obsidian-graph-auditor/obsidian_graph_auditor/: __init__.py  cli.py
skills/obsidian-graph-auditor/tests/: conftest.py  test_auditor.py  test_cli.py  test_rubric.py
skills/obsidian-orphan-killer/: CHANGELOG.md  LICENSE  README.md  SKILL.md  llms.txt
skills/obsidian-orphan-killer/.github/ISSUE_TEMPLATE/: bug.md  feature.md
skills/obsidian-orphan-killer/.research/: seo-cluster.md
skills/obsidian-orphan-killer/docs/: COMPARISON.md  RUBRIC.md  SAFETY.md
skills/obsidian-orphan-killer/examples/demo-vault/concepts/: graph-theory.md  knowledge-management.md
skills/obsidian-orphan-killer/examples/demo-vault/entities/: obsidian.md
skills/obsidian-orphan-killer/examples/demo-vault/sources/: mixed-residual.md  note-taking-thoughts.md  orphan-random-recipe.md
skills/obsidian-orphan-killer/obsidian_orphan_killer/: alias_table.py  anchor.py  cli.py  fm.py  guards.py  mint.py  resolve.py
skills/obsidian-orphan-killer/tests/: test_alias_table.py  test_resolve.py  test_slug.py
tests/: conftest.py  test_anchor.py  test_backends.py  test_cli.py  test_guards.py
