[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "obsidian-brain-eval"
version = "0.1.0"
description = "Measure Recall@10 of any retrieval system over an Obsidian vault. Gold-set generator + scorer + pluggable backends."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dhiraj Singh Pawar", email = "build.with.dhiraj@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "obsidian",
    "second-brain",
    "pkm",
    "rag",
    "retrieval",
    "evaluation",
    "recall",
    "gold-set",
    "knowledge-management",
    "lancedb",
    "bm25",
    "vault",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
naive = [
    "rank-bm25>=0.2.2",
]
lancedb = [
    "lancedb>=0.6",
    "fastembed>=0.3",
]
generate = [
    "openai>=1.30",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/build-with-dhiraj/obsidian-brain-eval"
Issues = "https://github.com/build-with-dhiraj/obsidian-brain-eval/issues"
Changelog = "https://github.com/build-with-dhiraj/obsidian-brain-eval/blob/main/CHANGELOG.md"
Documentation = "https://github.com/build-with-dhiraj/obsidian-brain-eval#readme"

[project.scripts]
obsidian-brain-eval = "obsidian_brain_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["obsidian_brain_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
